--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1>Odin Recipes Project</h1>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="padthai.html">Pad Thai</a></li>
-        <li><a href="curry.html">Curry</a></li>
-        <li><a href="morrocandish.html">Morrocan Dish</a></li>
+        <li><a href="recipes/padthai.html">Pad Thai</a></li>
+        <li><a href="recipes/curry.html">Curry</a></li>
+        <li><a href="recipes/morrocandish.html">Morrocan Dish</a></li>
     </ul>
     
     
