--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,38 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
+    <h1>How to Make Lasagna</h1>
+<a href="../index.html">Home</a> <br>
+<img src="https://sonomamarket.net/media/images/10/03/beef-lasagna-square.jpg" width="350" alt="">
+ 
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt earum accusamus sint neque quam. Animi, quia eos molestias dicta autem maxime quam accusantium eius? Suscipit quo non optio libero eaque!</p>
+
+    <ul> 
+        <li>
+            Ingredients
+        </li>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+    </ul> 
     
+    <ol> 
+        <li>
+            Steps
+        </li>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+    </ol>
 </body>
 </html>
